# Gomoku

./: CMakeLists.txt  Makefile  TODO  main.cpp
includes/IAminmax/: IAminmax.hh
includes/game/: Player.hh
includes/graphics/: sfml.hh
includes/referee/: Board.hh  Piece.hh  Referee.hh
src/IAminmax/: IAminmax.cpp
src/game/: Player.cpp
src/graphics/: sfml.cpp
src/referee/: Board.cpp  Piece.cpp  Referee.cpp
src/start/: main.cpp
